--- a/MifareReaderApp/App.xaml
+++ b/MifareReaderApp/App.xaml
@@ -2,8 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MifareReaderApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Red" SecondaryColor="Lime" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <SolidColorBrush x:Key="MainBackgroundColor">#FF4E4E4E</SolidColorBrush>
+            <SolidColorBrush x:Key="GreenStatus">#4caf50</SolidColorBrush>
+            <SolidColorBrush x:Key="RedStatus">#ff6551</SolidColorBrush>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
