--- a/MifareReaderApp/Views/OperatorPage.xaml
+++ b/MifareReaderApp/Views/OperatorPage.xaml
@@ -4,8 +4,65 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MifareReaderApp.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Red">
+             d:DesignHeight="450" d:DesignWidth="800" Name="OperatorPageView" >
+    <UserControl.Resources>
+        <Style BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
+            <Setter Property="Foreground" Value="Black" />
+        </Style>
+    </UserControl.Resources>
+    
+    <Grid d:Background="{StaticResource MainBackgroundColor}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel>
+
+            <Grid >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+
+                <TextBox x:Name="NameTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Имя" 
+                    IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Отчество"
+                    IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Фамилия"
+                    IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+            </Grid>
+
+            <Grid >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+
+                <TextBox x:Name="CardNumberTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Номер карты" 
+                        Text="{Binding ElementName=OperatorPageView, Path=ViewModel.CardNumber}"
+                        IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="ID1 Номер"
+                        IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="ID2 Номер"
+                        IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+            </Grid>
+
+            <Grid>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Width="110" Margin="5 0" IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Сохранить</Button>
+                    <Button Width="110" Margin="5 0" IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Удалить</Button>
+                </StackPanel>
+            </Grid>
+
+        </StackPanel>
+
     </Grid>
 </UserControl>
