--- a/MifareReaderApp/App.xaml
+++ b/MifareReaderApp/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MifareReaderApp"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:converters="clr-namespace:MifareReaderApp.Stuff.Converters"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -13,7 +14,8 @@
             <SolidColorBrush x:Key="MainBackgroundColor" Color="#FFF3F3F3"></SolidColorBrush>
             <SolidColorBrush x:Key="GreenStatus">#4caf50</SolidColorBrush>
             <SolidColorBrush x:Key="RedStatus">#ff6551</SolidColorBrush>
-
+            
+            <converters:DateTimeConverter x:Key="DateTimeConverter"></converters:DateTimeConverter>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
