--- a/MifareReaderApp/Views/OperatorPage.xaml
+++ b/MifareReaderApp/Views/OperatorPage.xaml
@@ -4,16 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MifareReaderApp.Views"
+             xmlns:models="clr-namespace:MifareReaderApp.ViewModels"
+            
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Name="OperatorPageView" >
+             d:DesignHeight="450" d:DesignWidth="800" Name="OperatorPageView" 
+             DataContext="{Binding ElementName=OperatorPageView, Path=ViewModel}">
     <UserControl.Resources>
         <Style BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
             <Setter Property="Foreground" Value="Black" />
         </Style>
+        
     </UserControl.Resources>
-    
-    <Grid d:Background="{StaticResource MainBackgroundColor}">
+
+    <Grid d:Background="{StaticResource MainBackgroundColor}" IsEnabled="{Binding FieldsIsEnabled}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
@@ -32,11 +36,11 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBox x:Name="NameTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Имя" 
-                    IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name}"/>
                 <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Отчество"
-                    IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name2}"/>
                 <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Фамилия"
-                    IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Surname}"/>
             </Grid>
 
             <Grid >
@@ -47,17 +51,54 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBox x:Name="CardNumberTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Номер карты" 
-                        Text="{Binding ElementName=OperatorPageView, Path=ViewModel.CardNumber}"
-                        IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                        Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Card}"/>
                 <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="ID1 Номер"
-                        IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id1}"/>
                 <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="ID2 Номер"
-                        IsEnabled="{Binding Path=ViewModel.FieldsIsEnabled, ElementName=OperatorPageView}"/>
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id2}"/>
             </Grid>
 
-            <Grid>
+            <Grid >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.5*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="0.5*" />
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="1" HorizontalAlignment="Center"  >
+
+                    <TextBlock HorizontalAlignment="Center" FontSize="16">Действительна до</TextBlock>
+
+                    <StackPanel Orientation="Horizontal" Margin="0 7 0 0">
+
+                        <DatePicker Name="DatePick" SelectedDate="{Binding User.BeforeDate, UpdateSourceTrigger=PropertyChanged}"
+                              Width="140" Margin="0 0 5 0" 
+                              materialDesign:HintAssist.Hint="Дата"
+                              Style="{StaticResource MaterialDesignOutlinedDatePicker}"/>
+
+                        <materialDesign:TimePicker Name="TimePick" Text="{Binding User.BeforeTime, UpdateSourceTrigger=PropertyChanged}"
+                              Width="140"  Margin="5 0 0 0" 
+                              materialDesign:HintAssist.Hint="Время"
+                              Is24Hours="True"
+                              Style="{StaticResource MaterialDesignOutlinedTimePicker}">
+
+                        </materialDesign:TimePicker>
+
+                        <!--<TextBlock Name="DateTimeTextblock" Text="{Binding User.Before, Mode=OneWayToSource}" >
+                            <Run Text="{Binding ElementName=DatePick, Path=Text}"></Run>
+                            <Run Text="{Binding ElementName=TimePick, Path=Text}"></Run>
+                           
+                        </TextBlock>-->
+                    </StackPanel>
+
+                </StackPanel>
+
+            </Grid>
+
+            <Grid Margin="0 15">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Width="110" Margin="5 0" IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Сохранить</Button>
+                    <Button Width="110" Margin="5 0" Command="{Binding SaveCommand}" CommandParameter="{Binding User}"
+                            IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Сохранить</Button>
                     <Button Width="110" Margin="5 0" IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Удалить</Button>
                 </StackPanel>
             </Grid>
