--- a/MifareReaderApp/Views/Controls/Status/StatusControl.xaml
+++ b/MifareReaderApp/Views/Controls/Status/StatusControl.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="MifareReaderApp.Views.Controls.Status.DatabaseStatusControl"
+﻿<UserControl x:Class="MifareReaderApp.Views.Controls.Status.StatusControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MifareReaderApp.Views.Controls.Status"
-             mc:Ignorable="d" Height="35" Width="35" Name="ControlView">
+             mc:Ignorable="d" 
+             Height="35" Width="35" Name="ControlView">
     <Border d:Background="Red" Background="{Binding ElementName=ControlView, Path=StatusColor}" CornerRadius="2">
-        <Image Source="/Resources/db.png" Margin="5" />
+        <Image Margin="{Binding ElementName=ControlView, Path=ImageMargin}" Source="{Binding ElementName=ControlView, Path=ImageSource}" />
     </Border>
 </UserControl>
