--- a/MifareReaderApp/Views/OperatorPage.xaml
+++ b/MifareReaderApp/Views/OperatorPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:constants="clr-namespace:MifareReaderApp.Stuff.Constants"
              xmlns:local="clr-namespace:MifareReaderApp.Views"
              xmlns:models="clr-namespace:MifareReaderApp.ViewModels"
             
@@ -17,7 +18,7 @@
         
     </UserControl.Resources>
 
-    <Grid d:Background="{StaticResource MainBackgroundColor}" IsEnabled="{Binding FieldsIsEnabled}">
+    <Grid d:Background="{StaticResource MainBackgroundColor}" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
@@ -28,37 +29,37 @@
 
         <StackPanel>
 
-            <Grid >
+            <Grid IsEnabled="{Binding FieldsIsEnabled}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="NameTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Имя" 
+                <TextBox x:Name="NameTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Name}" 
                          Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name}"/>
-                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Отчество"
+                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Name2}"
                          Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name2}"/>
-                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Фамилия"
+                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Surname}"
                          Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Surname}"/>
             </Grid>
 
-            <Grid >
+            <Grid IsEnabled="{Binding FieldsIsEnabled}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="CardNumberTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Номер карты" 
+                <TextBox x:Name="CardNumberTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Card}" 
                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Card}"/>
-                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="ID1 Номер"
+                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Id1}"
                          Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id1}"/>
-                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="ID2 Номер"
+                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Id2}"
                          Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id2}"/>
             </Grid>
 
-            <Grid >
+            <Grid IsEnabled="{Binding FieldsIsEnabled}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.5*" />
                     <ColumnDefinition Width="1*" />
@@ -71,35 +72,28 @@
 
                     <StackPanel Orientation="Horizontal" Margin="0 7 0 0">
 
-                        <DatePicker Name="DatePick" SelectedDate="{Binding User.BeforeDate, UpdateSourceTrigger=PropertyChanged}"
+                        <DatePicker Name="DatePick" SelectedDate="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
                               Width="140" Margin="0 0 5 0" 
-                              materialDesign:HintAssist.Hint="Дата"
-                              Style="{StaticResource MaterialDesignOutlinedDatePicker}"/>
+                              materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeDate}"
+                              Style="{StaticResource MaterialDesignOutlinedDatePicker}"/> <!--Text="{Binding User.BeforeDate, UpdateSourceTrigger=PropertyChanged}"-->
 
-                        <materialDesign:TimePicker Name="TimePick" Text="{Binding User.BeforeTime, UpdateSourceTrigger=PropertyChanged}"
-                              Width="140"  Margin="5 0 0 0" 
-                              materialDesign:HintAssist.Hint="Время"
+                        <materialDesign:TimePicker Name="TimePick" 
+                              Width="140"  Margin="5 0 0 0" SelectedTime="{Binding User.BeforeTime, UpdateSourceTrigger=PropertyChanged}"
+                              materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeTime}"
                               Is24Hours="True"
-                              Style="{StaticResource MaterialDesignOutlinedTimePicker}">
+                              Style="{StaticResource MaterialDesignOutlinedTimePicker}"><!--Text="{Binding User.BeforeTime, UpdateSourceTrigger=PropertyChanged}"-->
 
                         </materialDesign:TimePicker>
-
-                        <!--<TextBlock Name="DateTimeTextblock" Text="{Binding User.Before, Mode=OneWayToSource}" >
-                            <Run Text="{Binding ElementName=DatePick, Path=Text}"></Run>
-                            <Run Text="{Binding ElementName=TimePick, Path=Text}"></Run>
-                           
-                        </TextBlock>-->
                     </StackPanel>
 
                 </StackPanel>
 
             </Grid>
 
-            <Grid Margin="0 15">
+            <Grid Margin="0 15" IsEnabled="{Binding ButtonsIsEnabled}">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Width="110" Margin="5 0" Command="{Binding SaveCommand}" CommandParameter="{Binding User}"
-                            IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Сохранить</Button>
-                    <Button Width="110" Margin="5 0" IsEnabled="{Binding Path=ViewModel.ButtonsIsEnabled, ElementName=OperatorPageView}">Удалить</Button>
+                    <Button Width="110" Margin="5 0" Command="{Binding SaveCommand}" CommandParameter="{Binding User}">Сохранить</Button>
+                    <Button Width="110" Margin="5 0" >Удалить</Button>
                 </StackPanel>
             </Grid>
 
