--- a/MifareReaderApp/Views/AdministratorPage.xaml
+++ b/MifareReaderApp/Views/AdministratorPage.xaml
@@ -4,9 +4,34 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MifareReaderApp.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:constants="clr-namespace:MifareReaderApp.Stuff.Constants"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Name="PageView">
+             d:DesignHeight="450" d:DesignWidth="800" Name="PageView" DataContext="{Binding ElementName=PageView, Path=ViewModel}">
     <Grid Background="Green">
-        <Button Visibility="{Binding ElementName=PageView, Path=VisibilityProp}"></Button>
+        <local:OperatorPage>
+            <local:OperatorPage.CustomChild >
+                <Grid IsEnabled="{Binding FieldsIsEnabled}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+
+                    
+                    <!--<TextBox Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Place}" 
+                             Text="{Binding User.PlaceAsString}"/>-->
+                    <!--<TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Staff}"
+             Text="{Binding ElementName=PageView, Path=ViewModel.User.Id1}"/>-->
+                </Grid>
+            </local:OperatorPage.CustomChild>
+        </local:OperatorPage>
+        <ComboBox ItemsSource="{Binding Places}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"></TextBlock>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
     </Grid>
 </UserControl>
