--- a/MifareReaderApp/Views/OperatorPage.xaml
+++ b/MifareReaderApp/Views/OperatorPage.xaml
@@ -59,6 +59,10 @@
                          Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id2}"/>
             </Grid>
 
+            <Grid x:Name="CustomChildGrid" IsEnabled="{Binding FieldsIsEnabled}">
+                
+            </Grid>
+
             <Grid IsEnabled="{Binding FieldsIsEnabled}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.5*" />
@@ -71,29 +75,35 @@
                     <TextBlock HorizontalAlignment="Center" FontSize="16">Действительна до</TextBlock>
 
                     <StackPanel Orientation="Horizontal" Margin="0 7 0 0">
-
-                        <DatePicker Name="DatePick" SelectedDate="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
-                              Width="140" Margin="0 0 5 0" 
+                       
+                        <DatePicker Name="DatePick" SelectedDateFormat="Short"
+                              Width="140" Margin="0 0 5 0" SelectedDate="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
                               materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeDate}"
-                              Style="{StaticResource MaterialDesignOutlinedDatePicker}"/> <!--Text="{Binding User.BeforeDate, UpdateSourceTrigger=PropertyChanged}"-->
+                              Style="{StaticResource MaterialDesignOutlinedDatePicker}"/>
 
-                        <materialDesign:TimePicker Name="TimePick" 
-                              Width="140"  Margin="5 0 0 0" SelectedTime="{Binding User.BeforeTime, UpdateSourceTrigger=PropertyChanged}"
+                        <materialDesign:TimePicker Name="TimePick" SelectedTimeFormat="Short" 
+                              Width="140"  Margin="5 0 0 0" SelectedTime="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
                               materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeTime}"
                               Is24Hours="True"
-                              Style="{StaticResource MaterialDesignOutlinedTimePicker}"><!--Text="{Binding User.BeforeTime, UpdateSourceTrigger=PropertyChanged}"-->
+                              Style="{StaticResource MaterialDesignOutlinedTimePicker}">
 
                         </materialDesign:TimePicker>
+
+                        
+                        <!--<TextBlock>
+                            <Run Text="{Binding ElementName=DatePick, Path=Text}"></Run>
+                            <Run Text="{Binding ElementName=TimePick, Path=Text}"></Run>
+                        </TextBlock>-->
                     </StackPanel>
 
                 </StackPanel>
 
             </Grid>
 
-            <Grid Margin="0 15" IsEnabled="{Binding ButtonsIsEnabled}">
+            <Grid Margin="0 35" IsEnabled="{Binding ButtonsIsEnabled}">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button Width="110" Margin="5 0" Command="{Binding SaveCommand}" CommandParameter="{Binding User}">Сохранить</Button>
-                    <Button Width="110" Margin="5 0" >Удалить</Button>
+                    <Button Width="110" Margin="5 0" Command="{Binding RemoveCommand}" CommandParameter="{Binding User}">Удалить</Button>
                 </StackPanel>
             </Grid>
 
