--- a/MifareReaderApp/Views/MainWindow.xaml
+++ b/MifareReaderApp/Views/MainWindow.xaml
@@ -7,31 +7,39 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
         xmlns:views="clr-namespace:MifareReaderApp.Views"
         xmlns:statusControls="clr-namespace:MifareReaderApp.Views.Controls.Status"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Name="MainWindowView" DataContext="ViewModel" WindowStartupLocation="CenterScreen">
+        xmlns:converters="clr-namespace:MifareReaderApp.Stuff.Converters"
+        mc:Ignorable="d" 
+        MinWidth="800" MinHeight="450" ResizeMode="NoResize"
+        MaxWidth="800" MaxHeight="450"
+        Title="MainWindow" Height="450" Width="800" Name="MainWindowView" DataContext="{Binding ElementName=MainWindowView, Path=ViewModel}" WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+        <converters:InvertedBoolean x:Key="InvertedBoolean"></converters:InvertedBoolean>
+    </Window.Resources>
+    
     <Grid Background="{StaticResource ResourceKey=MainBackgroundColor}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="9*" />
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
-            <statusControls:StatusControl x:Name="DatabaseStatusControl" Margin="0 0 5 0" ImageMargin="5" ImageSource="/Resources/db.png"></statusControls:StatusControl>
-            <statusControls:StatusControl x:Name="PortStatusControl" Margin="0 0 5 0" DataContext="ViewModel" ImageSource="/Resources/port.png" ></statusControls:StatusControl>
-        </StackPanel>
-
         <TabControl x:Name="MainTabControl" Grid.RowSpan="2"  HorizontalContentAlignment="Left" 
                     materialDesign:ColorZoneAssist.Mode="PrimaryLight" IsTabStop="False"
                     SelectedItem="{Binding ElementName=MainWindowView, Path=ViewModel.SelectedTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             
             <TabItem x:Name="OperatorTab" Header="Оператор">
-                <views:OperatorPage></views:OperatorPage>
+                <views:OperatorPage ></views:OperatorPage>
             </TabItem>
-            <TabItem x:Name="AdministratorTab" Header="Администратор" >
+            <TabItem x:Name="AdministratorTab" Header="Администратор" IsEnabled="{Binding AdminMode}" >
                 <views:AdministratorPage></views:AdministratorPage>
             </TabItem>
             
         </TabControl>
-        
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
+
+            <CheckBox Content="Администратор" IsChecked="{Binding AdminMode}" Style="{StaticResource MaterialDesignFilterChipPrimaryOutlineCheckBox}"  />
+            <statusControls:StatusControl x:Name="DatabaseStatusControl" Margin="0 0 5 0" ImageMargin="5" ImageSource="/Resources/db.png"></statusControls:StatusControl>
+            <statusControls:StatusControl x:Name="PortStatusControl" Margin="0 0 5 0" DataContext="ViewModel" ImageSource="/Resources/port.png" ></statusControls:StatusControl>
+        </StackPanel>
     </Grid>
 </Window>
