--- a/MifareReaderApp/Views/OperatorPage.xaml
+++ b/MifareReaderApp/Views/OperatorPage.xaml
@@ -1,25 +1,26 @@
 ﻿<UserControl x:Class="MifareReaderApp.Views.OperatorPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:constants="clr-namespace:MifareReaderApp.Stuff.Constants"
              xmlns:local="clr-namespace:MifareReaderApp.Views"
              xmlns:models="clr-namespace:MifareReaderApp.ViewModels"
-        xmlns:converters="clr-namespace:MifareReaderApp.Stuff.Converters"
-            
+             xmlns:converters="clr-namespace:MifareReaderApp.Stuff.Converters"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Name="OperatorPageView" 
+             mc:Ignorable="d"
+             d:DesignHeight="450"
+             d:DesignWidth="800"
+             Name="OperatorPageView"
              DataContext="{Binding ElementName=OperatorPageView, Path=ViewModel}">
-    
+
     <UserControl.Resources>
-        <Style BasedOn="{StaticResource MaterialDesignOutlinedTextBox}" TargetType="TextBox">
-            <Setter Property="Foreground" Value="Black" />
+        <Style BasedOn="{StaticResource MaterialDesignOutlinedTextBox}"
+               TargetType="TextBox">
+            <Setter Property="Foreground"
+                    Value="Black" />
         </Style>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"></converters:BooleanToVisibilityConverter>
-        <converters:StringBooleanToBoolean x:Key="StringBooleanToBooleanConverter"></converters:StringBooleanToBoolean>
-        <converters:ComboBoxItemToId x:Key="ComboBoxItemToId"></converters:ComboBoxItemToId>
     </UserControl.Resources>
 
     <Grid d:Background="{StaticResource MainBackgroundColor}">
@@ -40,12 +41,22 @@
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="NameTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Name}" 
-                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name}"/>
-                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Name2}"
-                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name2}"/>
-                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Surname}"
-                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Surname}"/>
+                <TextBox x:Name="NameTextbox"
+                         Grid.Column="0"
+                         Margin="10"
+                         VerticalAlignment="Top"
+                         materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Name}"
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name}" />
+                <TextBox Grid.Column="1"
+                         Margin="10"
+                         VerticalAlignment="Top"
+                         materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Name2}"
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Name2}" />
+                <TextBox Grid.Column="2"
+                         Margin="10"
+                         VerticalAlignment="Top"
+                         materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Surname}"
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Surname}" />
             </Grid>
 
             <Grid IsEnabled="{Binding FieldsIsEnabled}">
@@ -55,33 +66,53 @@
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBox x:Name="CardNumberTextbox" Grid.Column="0" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Card}" 
-                        Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Card}"/>
-                <TextBox Grid.Column="1" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Id1}"
-                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id1}"/>
-                <TextBox Grid.Column="2" Margin="10" VerticalAlignment="Top" materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Id2}"
-                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id2}"/>
+                <TextBox x:Name="CardNumberTextbox"
+                         Grid.Column="0"
+                         Margin="10"
+                         VerticalAlignment="Top"
+                         materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Card}"
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Card}" />
+                <TextBox Grid.Column="1"
+                         Margin="10"
+                         VerticalAlignment="Top"
+                         materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Id1}"
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id1}" />
+                <TextBox Grid.Column="2"
+                         Margin="10"
+                         VerticalAlignment="Top"
+                         materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Id2}"
+                         Text="{Binding ElementName=OperatorPageView, Path=ViewModel.User.Id2}" />
             </Grid>
 
-            <Grid IsEnabled="{Binding FieldsIsEnabled}" Visibility="{Binding AdminMode, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Grid IsEnabled="{Binding FieldsIsEnabled}"
+                  Visibility="{Binding AdminMode, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <ComboBox Grid.Column="0" Width="256" HorizontalAlignment="Right" Margin="0 0 5 0"
-                          ItemsSource="{Binding AvailablePlaces}" DisplayMemberPath="Name"
-                          SelectedItem="{Binding User.PlaceId, Converter={StaticResource ComboBoxItemToId}}"
-                          materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Place}" 
+                <ComboBox Grid.Column="0"
+                          Width="256"
+                          HorizontalAlignment="Right"
+                          Margin="0 0 5 0"
+                          ItemsSource="{Binding AvailablePlaces}"
+                          DisplayMemberPath="Name"
+                          SelectedValue="{Binding User.PlaceId}"
+                          SelectedValuePath="Id"
+                          materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Place}"
                           Style="{StaticResource MaterialDesignOutlinedComboBox}">
                 </ComboBox>
 
-                <ComboBox Grid.Column="1" Width="256" HorizontalAlignment="Left" Margin="5 0 0 0" 
-                          SelectedValue="{Binding User.Staff, Converter={StaticResource StringBooleanToBooleanConverter}, Mode=TwoWay}"
-                          materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Staff}" 
+                <ComboBox Grid.Column="1"
+                          Width="256"
+                          HorizontalAlignment="Left"
+                          Margin="5 0 0 0"
+                          ItemsSource="{x:Static constants:Constants.YesOrNotValues}"
+                          DisplayMemberPath="Key"
+                          SelectedValue="{Binding User.Staff}"
+                          SelectedValuePath="Value"
+                          materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.Staff}"
                           Style="{StaticResource MaterialDesignOutlinedComboBox}">
-                    <ComboBoxItem>Да</ComboBoxItem>
-                    <ComboBoxItem>Нет</ComboBoxItem>
                 </ComboBox>
             </Grid>
 
@@ -92,42 +123,51 @@
                     <ColumnDefinition Width="0.5*" />
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="1" HorizontalAlignment="Center"  >
+                <StackPanel Grid.Column="1"
+                            HorizontalAlignment="Center">
 
-                    <TextBlock HorizontalAlignment="Center" FontSize="16">Действительна до</TextBlock>
+                    <TextBlock HorizontalAlignment="Center"
+                               FontSize="16">Действительна до</TextBlock>
 
-                    <StackPanel Orientation="Horizontal" Margin="0 7 0 0">
-                       
-                        <DatePicker Name="DatePick" SelectedDateFormat="Short"
-                              Width="140" Margin="0 0 5 0" SelectedDate="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
-                              materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeDate}"
-                              Style="{StaticResource MaterialDesignOutlinedDatePicker}"/>
+                    <StackPanel Orientation="Horizontal"
+                                Margin="0 7 0 0">
 
-                        <materialDesign:TimePicker Name="TimePick" SelectedTimeFormat="Short" 
-                              Width="140"  Margin="5 0 0 0" SelectedTime="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
-                              materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeTime}"
-                              Is24Hours="True"
-                              Style="{StaticResource MaterialDesignOutlinedTimePicker}">
+                        <DatePicker Name="DatePick"
+                                    SelectedDateFormat="Short"
+                                    Width="140"
+                                    Margin="0 0 5 0"
+                                    SelectedDate="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
+                                    materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeDate}"
+                                    Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
+
+                        <materialDesign:TimePicker Name="TimePick"
+                                                   SelectedTimeFormat="Short"
+                                                   Width="140"
+                                                   Margin="5 0 0 0"
+                                                   SelectedTime="{Binding User.Before, UpdateSourceTrigger=PropertyChanged}"
+                                                   materialDesign:HintAssist.Hint="{x:Static constants:LocalizedValues.BeforeTime}"
+                                                   Is24Hours="True"
+                                                   Style="{StaticResource MaterialDesignOutlinedTimePicker}">
 
                         </materialDesign:TimePicker>
-
-                        
-                        <!--<TextBlock>
-                            <Run Text="{Binding ElementName=DatePick, Path=Text}"></Run>
-                            <Run Text="{Binding ElementName=TimePick, Path=Text}"></Run>
-                        </TextBlock>-->
                     </StackPanel>
 
                 </StackPanel>
 
             </Grid>
 
-          
-
-            <Grid Margin="0 35" IsEnabled="{Binding ButtonsIsEnabled}">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Width="110" Margin="5 0" Command="{Binding SaveCommand}" CommandParameter="{Binding User}">Сохранить</Button>
-                    <Button Width="110" Margin="5 0" Command="{Binding RemoveCommand}" CommandParameter="{Binding User}">Удалить</Button>
+            <Grid Margin="0 35"
+                  IsEnabled="{Binding ButtonsIsEnabled}">
+                <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Center">
+                    <Button Width="110"
+                            Margin="5 0"
+                            Command="{Binding SaveCommand}"
+                            CommandParameter="{Binding User}">Сохранить</Button>
+                    <Button Width="110"
+                            Margin="5 0"
+                            Command="{Binding RemoveCommand}"
+                            CommandParameter="{Binding User}">Удалить</Button>
                 </StackPanel>
             </Grid>
 
